# iris

./: README.md  shell.nix
iris/: Cargo.toml
iris/src/: commands.rs  entities.rs  handler.rs  main.rs  server.rs
web/: biome.json  components.json  next.config.ts  package.json  pnpm-lock.yaml
web/src/app/(main)/: globals.css  layout.tsx  page.tsx
web/src/app/(main)/devices/: page.tsx
web/src/app/(test)/: layout.tsx
web/src/app/(test)/test-device/: page.tsx
web/src/components/: app-sidebar.tsx  devices-table.tsx  header.tsx  nav-devices.tsx  nav-header.tsx  nav-main.tsx  video.tsx
web/src/components/ui/: alert.tsx  avatar.tsx  badge.tsx  button.tsx  checkbox.tsx  dropdown-menu.tsx  input.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  table.tsx  tooltip.tsx
web/src/contexts/: iris-context.tsx
web/src/lib/: commands.ts  entities.ts
