[package]
name = "iris"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files = "0.6.6"
actix-cors = "0.7.0"
actix-ws = "0.3.0"
tokio = { version = "1", features = ["rt", "time", "macros"]}
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.12.0", features = ["v4", "fast-rng", "serde"]}
